--- a/Frontend course/estilo.css
+++ b/Frontend course/estilo.css
@@ -17,7 +17,8 @@ header, footer{
 header {
     background-image: linear-gradient(#262626, #2E4159);
     display: flex;
-    justify-content: space-between;    
+    justify-content: space-between;
+    flex-wrap: wrap; 
 }
 
 
@@ -58,12 +59,169 @@ div#usuarioInfo span{
 div#usuarioInfo button{
     margin-left: auto;
 }
+
+/* Butões */
+
+button, input[type="button"], input[type="submit"]{
+    background-color: #25374b;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    height: 2em;
+    cursor: pointer;
+}
+
+button.excluir {
+    background-color: red;
+}
+
+button:hover,
+input[type="button"]:hover,
+input[type="submit"]:hover{
+background-color: #182431;
+}
+
+button.excluir:hover:not(:disabled){
+    background-color: rgb(156, 4, 4);
+}
+
+button:disabled, 
+input[type="button"]:disabled, 
+input[type="submit"]:disabled{
+    background-color: #47515e;
+    color: rgb(143, 143, 143);
+    cursor: not-allowed;
+}
+
+
+
+/* Formulário */
+form{
+    margin: auto;
+    text-align: right;
+    width: fit-content;
+}
+
+form div.grid{
+    display: grid;
+    grid-template-columns: max-content max-content;
+    grid-gap: 0.5em;
+    align-items: center;
+    margin-bottom: 0.5em;
+}
+
+input, select{
+    height: 1.5em;
+    /* box-sizing: border-box -> redmensiona os elementosda mesma forma */
+}
+
+select{
+    height: 1.9em;
+}
+
+@media screen and (max-width: 480px) {
+    form{
+        width: 85%;
+        text-align: left;
+    }
+    form div.grid{
+        grid-template-columns: 1fr;
+    }  
+}
+
+label::after {
+    content: ":";
+
+}
+
+input:required:invalid,
+select:required:invalid{
+    border: 1px solid red;
+}
+
+@media screen and (max-width: 430px){
+    div#usuarioInfo{
+        margin-top: 1em;
+
+    }
+
+    div#usuarioInfo span {
+        text-align: left;
+    }
+
+    div#usuarioInfo button{
+        margin-left: 0em;
+    }
+}
+    
+
 /* main */
 main {
     background: linear-gradient( white, gray, #2E4159);
     padding: 1em;
     height: 100%;
 }
+
+/* NAV MENU */
+
+nav {
+    background-color: #47515e;
+    border-top: 1px solid white;
+    border-bottom: 1px solid white;
+}
+nav ul li {
+    display: inline-block;
+}
+
+nav ul{
+    margin: 0;
+    padding: 0;
+}
+
+nav ul li a{
+    padding: 1em;
+    display: inline-block;
+    color: white;
+    text-decoration: none;
+}
+
+nav ul li a:hover{
+    background-color: #cccccc;
+    color: #47515e;
+}
+
+nav div#dropdown_conteudo{
+    display: none;
+    position: absolute;
+    background-color: #47515e;
+    border: solid 1px white;
+    box-shadow: 0px 2px 4px 0px black;
+}
+
+nav li#dropdown:hover div#dropdown_conteudo {
+    display: block;
+}
+
+nav div#dropdown_conteudo a{
+    display: block;
+}
+
+@media screen and (max-width: 730px ) {
+    nav ul li{
+        display: block;
+        width: 100%;
+    }
+
+    nav ul li a{
+        width: 100%;
+    }
+
+    nav div#dropdown_conteudo{
+        position: relative;
+        box-shadow: none;
+    }
+}
+
 
 /* Alerta */
 
@@ -73,13 +231,13 @@ div.alerta{
     max-width: 400px;
     margin: 1em auto;
     word-wrap: break-word;
-    position: absolute;
+    /* position: absolute;
     top: 0.5em;
     left: 0;
     right: 5em;
     opacity: .9;
     box-shadow: 0px 2px 4px 0px black;
-    border-radius: 5px;
+    border-radius: 5px; */
 }
 
 div.alerta span{
@@ -100,14 +258,13 @@ div.alerta.sucesso{
     border-color: #006f05;
 }
 
-
-
-
 /* Tabela */
 table{
     border-spacing: 0.1em;
     margin: 0.5em auto;
-    width: 100%;
+    /* width: 100%; */
+    overflow-x: auto;
+    display: block;
 }
 
 table th{
@@ -143,6 +300,7 @@ table tfoot td{
 div#comandos{
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
     padding: 0.5em 0.1em;
     border-bottom: 1px solid white; 
 }
